# 001_ArduinoNano_LCD

./: .gitignore  README.md
sw_core_tools/: build.bat
sw_core_tools/cmake-3.30.4-windows-x86_64/doc/cmake/html/: genindex.html  index.html  objects.inv  search.html  searchindex.js
sw_core_tools/cmake-3.30.4-windows-x86_64/doc/cmake/html/_static/: documentation_options.js
sw_core_tools/cmake-3.30.4-windows-x86_64/man/man1/: ccmake.1  cmake-gui.1  cmake.1  cpack.1  ctest.1
sw_core_tools/cmake-3.30.4-windows-x86_64/man/man7/: cmake-buildsystem.7  cmake-commands.7  cmake-compile-features.7  cmake-configure-log.7  cmake-cxxmodules.7  cmake-developer.7  cmake-env-variables.7  cmake-file-api.7  cmake-generator-expressions.7  cmake-generators.7  cmake-language.7  cmake-modules.7  cmake-packages.7  cmake-policies.7  cmake-presets.7  cmake-properties.7  cmake-qt.7  cmake-server.7  cmake-toolchains.7  cmake-variables.7  cpack-generators.7
sw_core_tools/documentation_tools/Doxygen/: Doxyfile  layout.xml
sw_core_tools/documentation_tools/Doxygen/pages/: arch_behavioral.h  arch_dynamic.h  arch_main.h  arch_overview.h  arch_static.h
sw_core_tools/swBuild/cmake/: CMakeLists.txt  Lib_Exclude.cmake  Lib_Infineon.cmake.bak  Lib_Proj_bk.cmake  Lib_Proj_sdk.cmake  Lib_Proj_var.cmake  Lib_Root.cmake  function.cmake  option_assembler.cmake  option_compiler.cmake  option_linker.cmake  project_config.cmake  toolchain.cmake
sw_core_tools/swBuild/pyScript/: main.py
sw_core_tools/swBuild/pyScript/lib/: buildProject.py  cmakeConfig.py  fileHelper.py  pathConfig.py
sw_core_tools/swBuild/pyScript/register_tools/: registerFile.py  registerTools.py  test.py
(+2057 files in other folders)
